create actor vijay file

--- a/vijay.html
+++ b/vijay.html
@@ -3,3 +3,4 @@ git<center>
 </center>
 <hr>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ducimus culpa sint repellendus temporibus sunt aliquid minus unde perspiciatis officia.</p>
+<P>contact:9363981243</P>
